# change-view

./: init.bat
Histgram + Binaryzation/: Binaryzation.csproj  Binaryzation.sln  FrmTest.Designer.cs  FrmTest.cs  Threshold.cs
Histgram + Binaryzation/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
dll/: init.bat
opencv/: CMakeLists.txt  main.cpp  ty.h
search-line/: All_Init.cpp  Device.h  cam.h  control.cpp  elc.cpp  element.cpp  headfile.h  image_deal.cpp  image_deal.h  main.cpp  ty.cpp  zf_common_headfile.h
search-line-RUBO/: 0.Tux  All_Init.h  CMakeLists.txt  Device.cpp  a.py  cam.cpp  cam.h  control.cpp  data.Tux  data1.Tux  headfile.h  image_deal.cpp  image_deal.h  main.cpp  ty.cpp  ty.h  zf_common_headfile.h  zf_device_icm20602.cpp  zf_device_mt9v03x.h
search-line-RUBO2/: CMakeLists.txt  control.cpp  elc.h  element.h  image_deal.cpp  image_deal.h  main.cpp  ty.cpp  ty.h  zf_common_headfile.h  zf_device_icm20602.h  zf_device_mt9v03x.cpp  zf_device_mt9v03x.h
search-line-common/: CMakeLists.txt  main.cpp  ty.h
search-line-cross/: All_Init.h  control.h  image_deal.cpp  image_deal.h  main.cpp  zf_device_mt9v03x.cpp
search-line-shanghai/: cam.cpp  image_deal.cpp  main.cpp  make.sh  ty.cpp
